fix: changes font to more readable one

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 * {
-  font-family: "Inconsolata", monospace;
+  font-family: Inconsolata, Menlo, Monaco, "Bitstream Vera Sans Mono", monospace;
   font-size: 18px;
-  font-style: italic;
   font-weight: 300;
   /* padding: 2em 4em; */
   /* max-width: 40em; */
